--- a/index.html
+++ b/index.html
@@ -39,29 +39,90 @@
 
     <!-- Main Content -->
     <main>
-            <section class="section1">
-                <div class="section1-img"></div>
-            </section>
+        <!-- Section 1 -->
+        <section class="section1">
+            <div class="section1-img">
+                <img src="img/item1.svg" alt="study-group">
+            </div>
+            <div class="section1-content">
+                <h1 class="section-title">Un luogo a invito con tutto lo spazio necessario per parlare</h1>
+                <p class="section-text">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                </div>
+        </section>
+         <!-- Section 2 -->
+        <div class="wave"></div>
+        <section class="section2">
+            <div class="section2-content">
+                <h1 class="section-title">Dove trovarsi è facile</h1>
+                <p class="section-text">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei li e unirsi instantaneamente senza dover chiamare.</p>
+            </div>
+            <div class="section2-img">
+                <img src="img/item2.svg" alt="voice-connected">
+            </div>
+        </section>   
+        <div class="wave upside-down"></div>
 
-            <section class="section2">
-                <div class="right-content"></div>
-                <div class="left-content"></div>
-            </section>   
 
-            <section class="section3">
-                <div class="left-content"></div>
-                <div class="right-content"></div>
-            </section> 
+        <!-- Section 3 -->
+        <section class="section3">
+            <div class="section3-img">
+                <img src="img/item3.svg" alt="Community">
+            </div>
+            <div class="section3-content">
+                <h1 class="section-title">Da pochi a un fandom</h1>
+                <p class="section-text">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
+        </section> 
 
-            <section class="section4">
-                <div class="right-content"></div>
-                <div class="left-content"></div>
-            </section>  
 
-            <section class="section5">
-                <div class="big-background"></div>
-            </section>      
+        <!-- Section 4 -->
+        <div class="wave"></div>
+        <section class="section4">
+            <div class="section4-content">
+                <h1 class="section-title-bottom">Tecnologia affidabile per tenersi in contatto</h1>
+                <p class="section-text">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+            </div>
+            <div class="section4-img">
+                <img src="img/item4-big.svg" alt="video-call">
+            </div>
+        <div class="stars">
+            <div class="bottom-download">
+                <h2>Pronto a iniziare la tua avventura?</h2>
+                <button class="button-pink"><i class="fa-solid fa-down-long"></i> Scarica per mac</button>
+            </div>
+        </div>
+        </section>
+     
     </main>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
     <!-- Footer -->
     <footer>
         <div class="main-content-footer">
