--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <!-- Header -->
     <header>
         <nav id="navigation-menu">
-            <div class="logo"><i class="fa-brands fa-discord"></i></div>
+            <div class="logo"><img src="img/logo.svg" alt=""></div>
             <div class="link">
-                <ul>
-                    <li><a href="#">Scarica</a></li>
-                    <li> <a href="#">Perchè Discord</a></li>
-                    <li><a href="#">Nitro</a></li>
-                    <li><a href="#">Sicurezza</a></li>
-                    <li><a href="#">Assistenza</a></li>
+                <ul class="header-list">
+                    <li class="header-element"><a href="#">Scarica</a></li>
+                    <li class="header-element"><a href="#">Perchè Discord</a></li>
+                    <li class="header-element"><a href="#">Nitro</a></li>
+                    <li class="header-element"><a href="#">Sicurezza</a></li>
+                    <li class="header-element"><a href="#">Assistenza</a></li>
                 </ul>
             </div>
             <div class="login">
@@ -91,56 +91,85 @@
                 <button class="button-pink"><i class="fa-solid fa-down-long"></i> Scarica per mac</button>
             </div>
         </div>
-        </section>
-     
+        </section>     
     </main>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
     <!-- Footer -->
     <footer>
         <div class="main-content-footer">
-            <div class="footer-med-content"></div>
-            <div class="footer-small-content"></div>
-            <div class="footer-small-content"></div>
-            <div class="footer-small-content"></div>
-            <div class="footer-small-content"></div>
-        </div>
+            <div class="footer-med-content">
+                <h2 class="footer-title-med">Il tuo posto per parlare</h2>
+                <div class="language">
+                    <img src="img/ita.png" alt="italian-language">
+                    <h4>Italiano <i class="fa-solid fa-angle-down"></i></h4>
 
+                </div>
+                    <div class="socials">
+                        <i class="fa-brands fa-twitter"></i>
+                        <i class="fa-brands fa-instagram"></i>
+                        <i class="fa-brands fa-facebook"></i>
+                        <i class="fa-brands fa-youtube"></i>
+                    </div>
+            </div>
+
+            <div class="footer-small-content">
+                <ul class="footer-list">
+                    <li class="footer-title">Prodotto</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="footer-small-content">
+                <ul class="footer-list">
+                    <li class="footer-title">Compagnia</li>
+                    <li>Chi siamo</li>
+                    <li>Lavora con noi</li>
+                    <li>Marchio</li>
+                    <li>Redazione</li>
+                    <li>Negozio</li>
+                </ul>
+            </div>
+            <div class="footer-small-content">
+                <ul>
+                    <li class="footer-title">Risorse</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+            <div class="footer-small-content">
+                <ul class="footer-list">
+                    <li class="footer-title">Norme</li>
+                    <li>Scarica</li>
+                    <li>Perchè Discord</li>
+                    <li>Nitro</li>
+                    <li>Sicurezza</li>
+                    <li>Assistenza</li>
+                </ul>
+            </div>
+        </div>
         <div class="line-footer"></div>    
-            <div class="last-content-footer">
-                <div class="content">
-                    <div class="logo-footer">Logo</div>
-                    <div class="button-footer">Bottone</div>
+        <div class="last-content-footer">
+            <div class="content">
+                <div class="logo-footer">
+                    <img src="img/logo.svg" alt="logo">
+                </div>
+                <div class="button-footer">
+                    <button class="button-pink-footer">Registrati</button>
                 </div>
             </div>
+        </div>
     </footer>
-   
 </body>
 </html>
